#_009_Python grammer(1).txt
# 언더바( _ )의 역할 

for in range(5):
    print("Hello World")

File "<ipython-input-2-57340a315a56>", line 1
    for in range(5):
         ^
SyntaxError: invalid syntax


for _ in range(5):            # 반복을 위한 변수의 값을 무시하고자 할떄,
    print("Hello World")    # 띄어쓰기 실수하지 말자. 틀리는 부분

Hello World
Hello World
Hello World
Hello World
Hello World


# 리스트 컴프리헨션은 코딩테스트에서 2차원 리스트를 초기화 할때 매우효과적

n = 3
m = 4

array = [[0] * m for _ in range(n)]
print(array)

[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]